2009-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/StatusView.cs:
	* MonoDevelop.VersionControl.Views/CellRendererDiff.cs: Fixed
	  "Bug 470436 - Crash when using the mouse wheel to scroll
	  very fast on the diff viewer".

2009-06-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl/Repository.cs: Properly detect
	  versioned directories. Allow reverting whole directories.
	  All this fixes bug #436282 - solution/project/folders should
	  have 'Revert All' option.

2009-06-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Views/StatusView.cs: When
	  double-clicking on a file, open it. Fixes bug #402108 -
	  Double-click on item in the Review changes dialog should
	  open the file or show the differences.

2009-06-25  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.VersionControl/CreatePatchCommand.cs: 
	  Generate better initial names for created patches.

2009-06-23  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* VersionControl.addin.xml:
	  Add "Create Patch" to status view context menu.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs:
	* MonoDevelop.VersionControl.Views/DiffView.cs:
	* MonoDevelop.VersionControl.Views/StatusView.cs:
	* MonoDevelop.VersionControl.Views/CellRendererDiff.cs:
	* MonoDevelop.VersionControl.Dialogs/CommitMessageStylePanelWidget.cs:
	  Use the new DesktopService instead of PlatformService.

2009-06-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Views/StatusView.cs: Use
	  CreatePatchCommand to create the patch.

	* MonoDevelop.VersionControl/CreatePatchCommand.cs: Include
	  commit extensions in the generation of the patch, so
	  generated changelog entries are included.

	* MonoDevelop.VersionControl/Repository.cs: Convert absolute
	  paths to relative paths when a base path for the diff is